Project/_build/_log
### Starting build.
# Target: command.mli.depends, tags: { extension:mli, file:command.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules command.mli > command.mli.depends # cached
# Target: command.cmi, tags: { byte, compile, extension:mli, file:command.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -o command.cmi command.mli # cached
# Target: command.ml.depends, tags: { extension:ml, file:command.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules command.ml > command.ml.depends # cached
# Target: command.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:command.cmo, file:command.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -o command.cmo command.ml # cached
# Target: game.mli.depends, tags: { extension:mli, file:game.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules game.mli > game.mli.depends # cached
# Target: game.cmi, tags: { byte, compile, extension:mli, file:game.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -o game.cmi game.mli
+ ocamlfind ocamlc -c -o game.cmi game.mli
File "game.mli", line 25, characters 21-35:
25 | val init_from_json : Yojson.Basic.t -> t
                          ^^^^^^^^^^^^^^
Error: Unbound module Yojson
Command exited with code 2.
# Compilation unsuccessful.
